--- a/package.json
+++ b/package.json
@@ -26,5 +26,15 @@
   "bugs": {
     "url": "https://github.com/wizact/tmj-cli/issues"
   },
-  "homepage": "https://github.com/wizact/tmj-cli#readme"
+  "homepage": "https://github.com/wizact/tmj-cli#readme",
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ts": "^5.5.1",
+    "grunt-tslint": "^3.1.1",
+    "load-grunt-tasks": "^3.5.0",
+    "tslint": "^3.13.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.1"
+  }
 }
