--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "tslint": "^3.13.0",
     "typescript": "^1.8.10",
     "typings": "^1.3.1"
+  },
+  "dependencies": {
+    "request": "^2.73.0"
   }
 }
