--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-jwt": "^3.4.0",
+    "express-session": "^1.14.0",
+    "jsonwebtoken": "^7.1.6",
     "query-string": "^4.2.2",
     "request": "^2.73.0"
   }
