--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha ./test/**"
+    "test": "mocha ./test/**",
+    "setup": "node ./setup.js"
   },
   "repository": {
     "type": "git",
