--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ github_username:  wizact
 # Build settings
 markdown: kramdown
 
- lsi: false
- safe: true
- source: tmj-cli
- incremental: false
- highlighter: rouge
- gist:
-   noscript: false
- kramdown:
-   math_engine: mathjax
+lsi: false
+safe: true
+source: .
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
