--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Trade Me Jobs Unofficial ExpressJs Client
 email: amir(dot)mohtasebi(at)gmail(dot)com
 description: > # this means to ignore newlines until "baseurl:"
   Unofficial expressjs client for Trade Me Jobs API.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/tmj-cli" # the subpath of your site, e.g. /blog
 url: "http://mohtasebi.com" # the base hostname & protocol for your site
 twitter_username: amirmohtasebi
 github_username:  wizact
@@ -20,7 +20,7 @@ markdown: kramdown
 
 lsi: false
 safe: true
-source: tmj-cli
+source: .
 incremental: false
 highlighter: rouge
 gist:
