--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "/tmj-cli" # the subpath of your site, e.g. /blog
 url: "http://mohtasebi.com" # the base hostname & protocol for your site
 twitter_username: amirmohtasebi
 github_username:  wizact
+repository: "wizact/tmj-cli"
 
 # Build settings
 markdown: kramdown
